--- a/appphp/css/resibo.css
+++ b/appphp/css/resibo.css
@@ -69,3 +69,42 @@
  table td {
      padding: 5px;
  }
+ .img_recibo {
+     width: 70px;
+     height: 70px;
+     border-radius: 50px;
+     float: left;
+ }
+ .recibo_titulo {
+     text-align: left;
+     margin-top: 15px;
+     padding-top: 10px;
+     font-size: 50px;
+ }
+ .recibo_fecha {
+     text-align: left;
+     padding: 10px;
+ }
+ .recibo_btn_print {
+     margin: -100px 0px 25px 0px;
+ }
+ .recibo_seccion_resibo {
+     margin-top: 100px;
+     margin-bottom: 100px;
+     display: none;
+ }
+ .recibo_ing_contenedor {
+     display: inline-block;
+     width: 45%;
+     float: left;
+ }
+ .recibo_fecha_contenedor {
+     display: inline-block;
+     width: 45%;
+     float: right;
+ }
+ .recibo_datos_comprador_contenedor {
+     clear: both;
+     text-align: left;
+     padding-top: 20px;
+ }
